--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.3",
+    "react-scripts": "^5.0.1",
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
